Fixed backdrop-filter flickering when mobile nav is opened

--- a/styles/responsiveness.css
+++ b/styles/responsiveness.css
@@ -133,7 +133,6 @@
 
     .links.open{
         opacity: 1;
-        transform: scale(1);
     }
 
     .links {
@@ -154,7 +153,6 @@
 
         width: 100%;
         opacity: 0;
-        transform: scale(0);
         transform-origin: 95% 50px;
         transition-property: opacity, transform;
         transition-duration: var(--transition);
@@ -187,5 +185,9 @@
 
     :root {
         --button-width: 35px;
+    }
+
+    .links > a {
+        font-size: 10px;
     }
 }
